[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/misc/Stats.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 172
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 288
outline_size = 6
outline_color = Color( 1, 0.36, 0.36, 1 )
font_data = ExtResource( 1 )

[node name="Stats" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.603922 )

[node name="GLabelPre" type="Label" parent="."]
margin_left = 648.0
margin_top = 128.0
margin_right = 1254.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 4 )
text = "Grade:"
valign = 1

[node name="SLabel" type="Label" parent="."]
margin_left = 704.0
margin_top = 320.0
margin_right = 1704.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 1 )
text = "Score:0"
valign = 1

[node name="MLabel" type="Label" parent="."]
margin_left = 736.0
margin_top = 448.0
margin_right = 1736.0
margin_bottom = 512.0
rect_rotation = 0.011355
custom_fonts/font = SubResource( 2 )
text = "Misses:0"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ALabel" type="Label" parent="."]
margin_left = 760.0
margin_top = 544.0
margin_right = 1760.0
margin_bottom = 629.0
custom_fonts/font = SubResource( 3 )
text = "Accuracy:0%"
valign = 1

[node name="CLabel" type="Label" parent="."]
margin_left = 788.0
margin_top = 672.0
margin_right = 1540.0
margin_bottom = 743.0
custom_fonts/font = SubResource( 6 )
text = "Coins:0"

[node name="ScaryOverlay" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="GLabel" type="Label" parent="."]
visible = false
margin_left = 1248.0
margin_top = 56.0
margin_right = 1417.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 5 )
text = "A"

[node name="Tween" type="Tween" parent="."]
playback_speed = 0.5
playback/speed = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="ProcTim" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
